# crate_upd_bot

./: CHANGELOG.md  Cargo.toml  README.md  config.toml  db.sql
.github/workflows/: ci.yml  release.yml
src/: bot.rs  cfg.rs  db.rs  krate.rs  main.rs  util.rs
