[package]
name = "crate_upd_bot"
version = "0.1.13"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.4"
fntools = { git = "https://github.com/WaffleLapkin/fntools.git", rev = "8d59c82", features = ["stable"] }
log = { version = "0.4.17", features = ["serde"] }
simple_logger = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "fs", "rt-multi-thread"] }
teloxide = { version = "0.9.2", features = ["auto-send", "macros"] }
futures = "0.3.21"
tokio-postgres = "0.7.6"
derive_more = "0.99.17"
async-trait = "0.1.56"
toml = "0.5.9"
arraylib = "0.3.0"
libgit2-sys = "0.13.4"
either = "1.6.1"
tokio-stream = "0.1.9"
