[package]
name = "crate_upd_bot"
version = "0.1.18"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16.1"
fntools = { git = "https://github.com/WaffleLapkin/fntools.git", rev = "8d59c82", features = ["stable"] }
log = { version = "0.4.17", features = ["serde"] }
simple_logger = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["macros", "fs", "rt-multi-thread"] }
teloxide = { version = "0.12.0", features = ["auto-send", "macros"] }
futures = "0.3.26"
tokio-postgres = "0.7.7"
derive_more = "0.99.17"
async-trait = "0.1.64"
toml = "0.7.1"
arraylib = "0.3.0"
libgit2-sys = "0.14.2"
either = "1.8.1"
tokio-stream = "0.1.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
